--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<div class="caozuo">
 		<ul>
-			<li timerId="200" class="active">初级</li>
-			<li timerId="300">中级</li>
-			<li timerId="400">高级</li>
+			<li timerId="200">初级</li>
+			<li timerId="400" class="active">中级</li>
+			<li timerId="600">高级</li>
 		</ul>
 		
 		<ul>
