--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<div class="caozuo">
 		<ul>
-			<li time="400">初级</li>
-			<li time="200" class="active">中级</li>
-			<li time="100">高级</li>
+			<li data-time="400">初级</li>
+			<li data-time="200" class="active">中级</li>
+			<li data-time="100">高级</li>
 		</ul>
 		
 		<ul>
